Fixed gradient on ios

--- a/WebHost/src/app/features/blog/blog-posts/blog-posts.component.scss
+++ b/WebHost/src/app/features/blog/blog-posts/blog-posts.component.scss
@@ -72,7 +72,7 @@
           left: 0;
           right: 0;
           height: 100px;
-          background-image: linear-gradient(rgba(0, 0, 0, 0), white);
+          background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, white 100%);
         }
       }
     }
